2006-10-09 Jens Tkotz <jens@peino.de> 1.6-svn-b18

 * Fix: Code and CSS adjustments to new yui! version.

2006-10-03 Jens Tkotz <jens@peino.de> 1.6-svn-b17

 * Update: yahoo! yui -> 0.11.4

2006-09-16 Jens Tkotz <jens@peino.de> 1.6-svn-b16

 * Fix/Change: lib/lang.php
    - initlanguage() was called to late in init.php.
      This results in a Call to undefined function: _()

    - Added second param $userlanguage to initlanguage()
      If this is set a reinit is forced.

    - Check in init.php for user language if this is different then
      already initialized $gallery->language, do a reinit.

    - Enhanced the emulation of gettext and ngettext to adjust with possible
      reinit.

2006-09-17 Jens Tkotz <jens@peino.de> 1.6-svn-b15
2006-03-28 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b18

 * SECURITY FIX *

  It was possible to use/"inject" Javascript inside various places
  to abuse this as a XSS Exploit.

  Now every userinput got from $_REQUEST is sanitized.
  We use the PEAR packages HTML_Safe and XML_HTMLSax3 to do this.
  Nice benefit is that HTML is now again possible in captions, titles, etc.

  The Team would like to thank Aditya Mooley for catching and reporting this.
  And giving us the time to fix it before going to public.

  Aditya Mooley is member of the Coppermine-Gallery Development team.
  So have a look at http://coppermine.sf.net,
  the page of our friendly competittion application.

2006-09-17 Jens Tkotz <jens@peino.de> 1.6-svn-b14

 * Added help/blacklist.txt, which is blacklist from MT-Blacklist Version 1.6.2
   from Jay Allen. http://www.jayallen.org/projects/mt-blacklist

   I include it, as MT-Blacklist is not longer developed.

2006-09-17 Jens Tkotz <jens@peino.de> 1.6-svn-b13

 * Update: wz_jsgraphics.js    v. 2.36

 * Little code nicify js/multifile.js.php

2006-09-17 Jens Tkotz <jens@peino.de> 1.6-svn-b12

 * Change: Links in Gallery and Album titles are now handled fine.
    - New function clearGalleryTitle($addon)
